v.0.1a Fix canvas overflow

--- a/style.css
+++ b/style.css
@@ -17,9 +17,14 @@ html, body {
 	height: 50%;
 }
 
-canvas {
+#canvasDiv {
+	float: left;
+	width: 95%;
+	height: 85%;
 	margin: 5% 0;
 	border: solid #000 1px;
+	text-align: center;
+	overflow: scroll;
 }
 
 textarea {
